# pm-final

./: .dockerignore  .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: base.py  decision_maker.py  execution_agent.py  market_monitor.py
app/api/: routes_trading.py
app/db_models/: db.py  schemas.py  trade_entity.py
app/ml/: model_inference.py  model_loader.py
app/services/: market_data_client.py  trading_engine.py
docs/: DOCUMENTATION.md  REPORT.md
frontend/: BACKEND_INTEGRATION.md  CLAUDE.md  README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/trading_project/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
